# portia-agent-examples

./: .gitignore  CONTRIBUTING.md  README.md  main.py  portia-agent-examples.code-workspace
ai-research-agent/: .env.example  README.md  agent.py  agent_with_plan_builder.py  agent_with_plan_builder_local.py  agent_with_plan_builder_research.py  context.md  conversation_config.yaml  discord_bot.py  main_with_plan_builder.py  podcast_tool.py  pyproject.toml  test_agent_with_plan_builder.py  test_agent_with_plan_builder_local.py
ai-research-agent/.github/workflows/: run.yml
community_agents/: README.md
community_agents/developer_meetup_finder/: .env.example  README.md  data.json  email_service.py  event_registration.py  events_discover.py  main.py  pyproject.toml
community_agents/sql_agent_example/: README.md  requirements.txt
community_agents/usdc-agent/: README.md  main.py  pyproject.toml  test_setup.py
developer_meetup_finder/: .env.example  README.md  custom_tools.py  data.json  email_service.py  event_automation.py  event_discovery.py  event_registration.py  events_discover.py  main.py  multi-agent.py  pyproject.toml
discord-knowledge-bot/: .env.example  .gitignore  README.md  ask.py  compose.yaml  discord_server.py  loader.py  pyproject.toml  tools.py
discord-knowledge-bot/bot/: ask.py  discord_server.py  loader.py  weaviate.py
dvla-agent/: .env.example  README.md  __init__.py  agent.py  app.py  clarification.py  models.py  processing.py
get-started-google-tools/: README.md  example.py  gen_ai_zrh.py  main.py  main2.py  main3.py  main4.py  main_with_plan_builder.py  pyproject.toml
get-started-google-tools/demo_runs/: plan-01031228-871b-4601-9f53-1ce391763da8.json  plan-323c2305-fd47-4efb-b9d8-df3da79cfe91.json  plan-924c700d-efac-4b89-a796-924c5d0e6219.json  wkfl-5a65d3ff-97af-49bb-b383-0e490e5b62bb.json  wkfl-d31d0601-73e8-4c60-8207-b06d277cff78.json  wkfl-ded63c3c-c2d3-48fc-94fd-356d46a23d7f.json
get_started_google_tools/: README.md  agent.py  main.py  pyproject.toml
getting-started/: .env.example  1_github_oauth.py  2_tools_end_users_llms.py  2b_tools_end_users_llms.py  3_mcp.py  4_browser_use.py  5_plan_builder.py  README.md  pyproject.toml
github-pr-agent/: .env.example  README.md  agent.py  pyproject.toml
github-pr-agent/tools/: __init__.py  comment_on_pr_tool.py  get_latest_pr_tool.py  registry.py
grocery-manager-agent/: .env.example  README.md  grocery_tool.py  main.py  notes_agent.py  pyproject.toml  shopping_agent.py
improving-planning-with-ull/: .env.example  01_mcp_vague_no_examples.py  01_ull_vague_prompt_no_examples.py  02_mcp_good_no_examples.py  02_ull_good_prompt_no_examples.py  03_mcp_create_example_plans.py  03_mcp_static_example_plans.py  03_ull_static_example_plans.py  04_mcp_vague_with_examples copy.py  04_ull_create_example_plans.py  05_mcp_vague_with_examples.py  05_ull_vague_with_examples.py  README.md  common.py  mock_tools.py  pyproject.toml
kyc-agent/: .env.example  README.md  main.py  pyproject.toml
kyc-screening-agent/: .env.example  .gitignore  README.md  kyc_agent.py  pyproject.toml
local-llm/: README.md  main.py  pyproject.toml
local-llm/sample_obsidian_vault/: DDD.md  Microservices.md  Pokemon.md
local-llm/sample_obsidian_vault/.obsidian/: workspace.json
local-llm/tests/: test_visualization.py
local-llm/tools/: visualization_tool.py
outreach-agent/: .env.example  README.md  agent.py  pyproject.toml  research_and_connect.txt  retrieve_potential_connections.txt
planning-poker/: .env.example  README.md  main.py  mainethan.py  pyproject.toml
planning-poker/.portia/cache/agent_memory/prun-9a11c150-c182-4551-b591-566be5366650/: $output_0.json
refund-agent-mcp/: .env.example  .gitignore  README.md  pyproject.toml  refund_agent.py  refund_agent_plan_builder.py  refund_agent_with_builder.py  refund_agent_with_local_mcp.py  refund_policy.txt  stripe_setup.py  test.sh
refund-agent-mcp/evals/: evals.py
scraper-agent/: README.md  main.py  pyproject.toml
simple-planning-agent/: README.md  main.py  pyproject.toml
sql_agent_example/: README.md  sample_store.db  setup_database.py  simple_sql_agent.py
usdc-agent/: .env.example  README.md  main.py  pyproject.toml
vehicle-assistance-agent/: .env.example  README.md  __init__.py  agent.py  app.py  models.py  processing.py  pyproject.toml  run_app.sh
