[project]
name = "bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Nathan Perkins",email = "nathanjp91@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "langchain-text-splitters (>=0.3.5,<0.4.0)",
    "langchain-community (>=0.3.16,<0.4.0)",
    "langchain-core (>=0.3.33,<0.4.0)",
    "langchain-openai (>=0.3,<0.4)",
    "py-cord (>=2.6.1,<3.0.0)",
    "portia-sdk-python (>=0.6.1)",
    "langchain (>=0.3.18,<0.4.0)",
    "markdownify (>=0.14.1,<0.15.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "ruff (>=0.9.6,<0.10.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "weaviate-client (>=4.11.0,<5.0.0)",
    "audioop-lts (>=0.2.1,<0.3.0) ; python_version >= \"3.13\"",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
