[project]
name = "portia_get_started_google_tools"
version = "0.1.0"
description = "Get started with Google tools and Portia AI"
authors = [{ name = "Portia AI", email = "hello@portialabs.ai" }]
requires-python = ">=3.11,<4"
dependencies = [
    "portia-sdk-python>=0.7.0,<0.8.0",
    "python-dotenv>=1.0.1,<2",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
