[tool.poetry]
name = "portia_kyc_screening_agent"
version = "0.1.0"
description = "KYC screening agent using Portia AI"
authors = ["Portia AI <hello@portialabs.ai>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
portia-sdk-python = "^0.1.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"