[project]
name = "local-llm"
version = "0.1.0"
description = ""
authors = [
    {name = "hello@portialabs.ai"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "portia-sdk-python[all] (>=0.3.0,<0.4.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
portia-sdk-python = {allow-prereleases = true}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
