[project]
name = "portia_outreach_agent"
version = "0.1.0"
description = "Outreach agent for Portia AI"
authors = [{ name = "Portia AI", email = "hello@portialabs.ai" }]
requires-python = "~=3.11"
dependencies = [
    "portia-sdk-python[tools-browser-local]>=0.7.0,<0.8.0",
    "python-dotenv>=1.0.1,<2",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
