[project]
name = "portia-usdc-agent"
version = "0.1.0"
description = "USDC agent to send gasless usdc payments to any wallet using Coinbase Developer Platform SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "portia-sdk-python>=0.6.2,<0.7.0",
    "python-dotenv>=1.1.1",
    "cdp-sdk==1.31.0",
]
